# PhySim_rust

./: Cargo.toml  readme.md  readme_en.md
src/: db.rs  gnpinn.rs  main.rs  models.rs  pde_residuals.rs  schema.rs  simulation.rs  visualization.rs
