[package]
name = "cz_cfd_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core numerical library for grid operations
ndarray = "0.15"

# Database ORM and connection pooling
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.10"
dotenvy = "0.15"

# Command-line interface
clap = { version = "4.4.8", features = ["derive"] }

# 2D Plotting for visualization
plotters = "0.3.5"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"